Latency Collector Is Now Ready For Pods

--- a/test/performance/latency-collector/config/rbac/role.yaml
+++ b/test/performance/latency-collector/config/rbac/role.yaml
@@ -21,6 +21,14 @@ rules:
   - get
   - list
 - apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - work.open-cluster-management.io
   resources:
   - appliedmanifestworks
